[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [
  {name = "Rhine Cliff", email = "rhinecliff@protonmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["aiohttp", "aiostream", "asyncio", "python-dateutil"]
description = "HTTP MQ Python client module"
keywords = ["httpmq"]
license = {file = "LICENSE"}
name = "httpmq"
readme = "README.md"
requires-python = ">=3.7"
version = "0.1.0-rc.1"

[project.urls]
"Bug Tracker" = "https://github.com/alwitt/httpmq-python/issues"
"Homepage" = "https://github.com/alwitt/httpmq-python"
